--- a/contactos.html
+++ b/contactos.html
@@ -24,11 +24,11 @@
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Asunto</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="textarea" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Mensaje</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="textarea" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -45,18 +45,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- <script src="js/js.js"></script> -->
     <script>
-      var botonIngresar = document.getElementById('botonIngresar');
-      var usuarioDropdown = document.querySelector('#salir');
-      var botonLogOut = document.getElementById('botonLogOut');
-
-      const botonIngre = () =>{
-        botonIngresar.style.display = "none";
-        usuarioDropdown.style.display = "block";
-      }
-      const logOut = () =>{
-        botonIngresar.style.display = "block";
-        usuarioDropdown.style.display = "none";
-      }
+    //  var botonIngresar = document.getElementById('botonIngresar');
+    //  var usuarioDropdown = document.querySelector('#salir');
+    //  var botonLogOut = document.getElementById('botonLogOut');
+    //
+    //  const botonIngre = () =>{
+    //    botonIngresar.style.display = "none";
+    //    usuarioDropdown.style.display = "block";
+    //  }
+    //  const logOut = () =>{
+    //    botonIngresar.style.display = "block";
+    //    usuarioDropdown.style.display = "none";
+    //  }
     </script>
     <script src="js/obteenerProductos.js"></script>
     <script src="src/index.js"></script>
