--- a/contactos.html
+++ b/contactos.html
@@ -28,7 +28,7 @@
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Mensaje</label>
-              <input type="textarea" class="form-control" id="exampleInputPassword1">
+              <textarea rows="4" cols="50"></textarea>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
